# design_patterns

./: .gitignore  README.md
creational_patterns/factory_method/: CMakeLists.txt  README.md
creational_patterns/factory_method/app/: demo.cpp
creational_patterns/factory_method/include/: lidar_odometry.hpp  lidar_odometry_factory.hpp  odometry.hpp  odometry_factory.hpp  visual_odometry.hpp  visual_odometry_factory.hpp
creational_patterns/factory_method/src/: lidar_odometry.cpp  lidar_odometry_factory.cpp  visual_odometry.cpp  visual_odometry_factory.cpp
